@@ -5,7 +5,7 @@
 
     <tools enable-elasticsearch="true" enable-camel="false"/>
 
-    <cache-list>
+    <cache-list warm-on-start="false">
         <!-- Development Mode - don't use these for production, load testing, etc.
              Cleared by default every 20 seconds from when loaded into cache. -->
         <cache name="entity.definition" expire-time-idle="30"/>
